# ossuary

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  setup.cfg
bones/: __init__.py  __main__.py  color.py  draw.py  hammer.py  pmf.py  roll.py  warhammer.py
oddly/: __init__.py  __main__.py  color.py  draw.py  hammer.py  pmf.py  roll.py
ossuary/: __init__.py  __main__.py  color.py  draw.py  hammer.py  pmf.py  roll.py
stubs/lea/: __init__.pyi  alea.pyi  blea.pyi  clea.pyi  dlea.pyi  evidence_ctx.pyi  flea.pyi  flea1.pyi  flea2.pyi  flea2a.pyi  glea.pyi  ilea.pyi  lea.pyi  leaf.pyi  license.pyi  olea.pyi  plea.pyi  rlea.pyi  slea.pyi  tlea.pyi
tests/: __init__.py  test_attack_pmf.py  test_attribute.py  test_characteristics.py  test_color.py  test_dice_pmf.py  test_draw.py  test_main.py  test_pmf.py  test_profile.py  test_roll.py
tests/hammer/: __init__.py  test_attacks.py  test_characteristics.py  test_profiles.py
tests/warhammer/: __init__.py  test_attacks.py  test_characteristics.py  test_profiles.py
