[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bones"
version = "0.0.0"
description = "dice analysis toolkit"
authors = [
    {name = "Bradd Szonye", email = "bszonye@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["dice", "probability"]
requires-python = ">=3.11.0rc2"
dependencies = [
    "lea",
]

[project.optional-dependencies]
plot = [
    "matplotlib",
]
gtkplot = [
    "bones[plot]",
    "PyGObject",
]

[project.scripts]
bones = "bones.__main__:main"

[project.urls]
Homepage = "https://github.com/bszonye/bones"
Repository = "https://github.com/bszonye/bones"
Documentation = "https://github.com/bszonye/bones"
# Changelog = "https://github.com/bszonye/bones/TODO"

[tool.pdm.build]
includes = ["bones"]

[tool.pdm.dev-dependencies]
lint = [
    # "git+ssh://git@github.com/python/mypy.git",
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-docstrings",
    "flake8-isort",
    "flake8-pyi",
    "isort",
    "pip",
    "pre-commit",
    "pydocstyle",
    "pyright",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.black]
line-length = 86

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    '@overload',
    'if __name__ == .__main__.:',
    'raise NotImplementedError',
]

[tool.coverage.run]
branch = true

[tool.isort]
profile = "black"
line_length = 86
combine_as_imports = true
order_by_type = false
skip_gitignore = true
extra_standard_library = ['tomllib']  # issue #2007

[tool.mypy]
mypy_path = "stubs"
files = "."
strict = true
warn_no_return = true
warn_unreachable = true

[tool.pydocstyle]
match = '.*[.]py'

[tool.pyright]
typeCheckingMode = "strict"
include = ["bones", "tests"]
exclude = ["**/node_modules", "**/__pycache__", "**/.*"]
stubPath = "stubs"
pythonVersion = "3.11"
pythonPlatform = "All"

[tool.pytest.ini_options]
addopts = "--cov=bones --cov-report=term-missing:skip-covered --cov-report=html"
filterwarnings = [
    # "error",
    # "ignore::UserWarning",
    'ignore:DynamicImporter:ImportWarning',
    'ignore:Gtk\.Window\.set_wmclass:DeprecationWarning',
]
